[gd_scene load_steps=13 format=3 uid="uid://cnikb2knlft7d"]

[ext_resource type="PackedScene" uid="uid://cnpl4d2rgyrvm" path="res://rooj/Map.tscn" id="1_ekgu0"]
[ext_resource type="Script" uid="uid://cjfhnhgexlk43" path="res://GameProject/main_game.gd" id="1_qqmk4"]
[ext_resource type="PackedScene" uid="uid://co5qpuj3hns3e" path="res://content/character/ninja_blue/ninja_blue.tscn" id="2_jaf13"]
[ext_resource type="PackedScene" uid="uid://4fim5lbsvgpe" path="res://GameProject/Enemy/giantbamboo.tscn" id="2_uykdc"]
[ext_resource type="PackedScene" uid="uid://btpbkwyh7qrky" path="res://GameProject/Enemy/giantspirit.tscn" id="5_ci541"]
[ext_resource type="PackedScene" uid="uid://bb3e2qhrp5khe" path="res://GameProject/Enemy/giantredsamurai.tscn" id="6_7ebma"]
[ext_resource type="PackedScene" uid="uid://b0rbig6p7l0sp" path="res://GameProject/Enemy/giantfrog.tscn" id="7_m6fgc"]
[ext_resource type="PackedScene" uid="uid://erkbng8ftpkc" path="res://GameProject/Enemy/giantflam.tscn" id="8_8e4rw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7ebma"]
size = Vector2(509, 273)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0266e"]
size = Vector2(448, 240)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ci541"]
size = Vector2(488, 480)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m6fgc"]
size = Vector2(624, 280)

[node name="MainGame" type="Node2D"]
position = Vector2(4320, 1728)
script = ExtResource("1_qqmk4")

[node name="Map" parent="." instance=ExtResource("1_ekgu0")]
position = Vector2(-3384, -1592)

[node name="NinjaBlue" parent="." instance=ExtResource("2_jaf13")]
position = Vector2(-1600, -1224)

[node name="Camera2D" type="Camera2D" parent="NinjaBlue"]
zoom = Vector2(4, 4)
limit_smoothed = true

[node name="dialog" type="CanvasLayer" parent="NinjaBlue/Camera2D"]

[node name="Panel" type="Panel" parent="NinjaBlue/Camera2D/dialog"]
offset_left = 32.0
offset_top = 480.0
offset_right = 1248.0
offset_bottom = 688.0
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="NinjaBlue/Camera2D/dialog/Panel"]
layout_mode = 0
offset_left = 16.0
offset_right = 1168.0
offset_bottom = 64.0
metadata/_edit_use_anchors_ = true

[node name="RichTextLabel" type="RichTextLabel" parent="NinjaBlue/Camera2D/dialog/Panel"]
layout_mode = 0
offset_left = 16.0
offset_top = 64.0
offset_right = 1200.0
offset_bottom = 200.0
metadata/_edit_use_anchors_ = true

[node name="Button" type="Button" parent="NinjaBlue/Camera2D/dialog/Panel"]
modulate = Color(1, 1, 1, 0.333333)
layout_mode = 0
offset_right = 1216.0
offset_bottom = 208.0
metadata/_edit_use_anchors_ = true

[node name="Label2" type="Label" parent="NinjaBlue/Camera2D/dialog/Panel"]
layout_mode = 0
offset_left = 1120.0
offset_top = 176.0
offset_right = 1201.0
offset_bottom = 208.0
text = "กดเพื่อไปต่อ"
metadata/_edit_use_anchors_ = true

[node name="MapZone" type="Node2D" parent="."]
visible = false
metadata/_edit_lock_ = true

[node name="Desert" type="Area2D" parent="MapZone"]
position = Vector2(-4040, -1568)
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="MapZone/Desert"]
shape = SubResource("RectangleShape2D_7ebma")

[node name="Forest1" type="Area2D" parent="MapZone"]
position = Vector2(-3464, -1568)

[node name="CollisionShape2D" type="CollisionShape2D" parent="MapZone/Forest1"]
shape = SubResource("RectangleShape2D_7ebma")

[node name="Forest2" type="Area2D" parent="MapZone"]
position = Vector2(-2920, -1568)

[node name="CollisionShape2D" type="CollisionShape2D" parent="MapZone/Forest2"]
shape = SubResource("RectangleShape2D_7ebma")

[node name="Forest3" type="Area2D" parent="MapZone"]
position = Vector2(-2920, -1248)

[node name="CollisionShape2D" type="CollisionShape2D" parent="MapZone/Forest3"]
shape = SubResource("RectangleShape2D_7ebma")

[node name="Forest4" type="Area2D" parent="MapZone"]
position = Vector2(-3464, -1256)

[node name="CollisionShape2D" type="CollisionShape2D" parent="MapZone/Forest4"]
position = Vector2(8, 0)
shape = SubResource("RectangleShape2D_0266e")

[node name="Forest5" type="Area2D" parent="MapZone"]
position = Vector2(-2352, -1248)

[node name="CollisionShape2D" type="CollisionShape2D" parent="MapZone/Forest5"]
shape = SubResource("RectangleShape2D_7ebma")

[node name="City1" type="Area2D" parent="MapZone"]
position = Vector2(-1816, -1248)

[node name="CollisionShape2D" type="CollisionShape2D" parent="MapZone/City1"]
shape = SubResource("RectangleShape2D_7ebma")

[node name="City2" type="Area2D" parent="MapZone"]
position = Vector2(-1272, -1256)

[node name="CollisionShape2D" type="CollisionShape2D" parent="MapZone/City2"]
shape = SubResource("RectangleShape2D_ci541")

[node name="City3" type="Area2D" parent="MapZone"]
position = Vector2(-688, -1256)

[node name="CollisionShape2D" type="CollisionShape2D" parent="MapZone/City3"]
shape = SubResource("RectangleShape2D_m6fgc")

[node name="giantbamboo" parent="." instance=ExtResource("2_uykdc")]
position = Vector2(-1688, -1248)

[node name="giantspirit" parent="." instance=ExtResource("5_ci541")]
position = Vector2(-3496, -1256)

[node name="giantredsamurai" parent="." instance=ExtResource("6_7ebma")]
position = Vector2(-3840, -1632)

[node name="Giantfrog" parent="." instance=ExtResource("7_m6fgc")]
position = Vector2(-3576, -1560)

[node name="Giantflam" parent="." instance=ExtResource("8_8e4rw")]
position = Vector2(-3432, -1568)

[connection signal="area_entered" from="MapZone/Desert" to="." method="_on_desert_area_entered"]
